ccenter/main/default/objects/Household_Distribution__c/Household_Distribution__c.object-meta.xml
<CustomObject>
    <description>A Recipient picking up their monthly nutritional assistance distribution</description>
    <label>Household Distribution</label>
    <nameField>
        <displayFormat>HD-{YYYY}-{MM}-{0000}</displayFormat>
        <label>Household Distribution Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Household Distributions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>