ccenter/main/default/objects/Household_Distribution__c/fields/Distribution__c.field-meta.xml
<CustomField>
    <fullName>Distribution__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The distribution period that is relevant</description>
    <label>Distribution</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Distribution__c.Status__c</field>
            <operation>equals</operation>
            <value>Open</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Distribution__c</referenceTo>
    <relationshipLabel>Household Distributions</relationshipLabel>
    <relationshipName>Household_Distributions</relationshipName>
    <type>Lookup</type>
</CustomField>