ccenter/main/default/objects/Household_Distribution__c/fields/Distribution_Month__c.field-meta.xml
<CustomField>
    <fullName>Distribution_Month__c</fullName>
    <label>Distribution Month</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Distribution_Month</valueSetName>
    </valueSet>
</CustomField>