ccenter/main/default/objects/Household_Distribution__c/fields/Distribution_Year__c.field-meta.xml
<CustomField>
    <fullName>Distribution_Year__c</fullName>
    <defaultValue>&quot;2025&quot;</defaultValue>
    <label>Distribution Year</label>
    <length>4</length>
    <required>true</required>
    <type>Text</type>
</CustomField>