ccenter/main/default/objects/Household_Distribution__c/fields/Household__c.field-meta.xml
<CustomField>
    <fullName>Household__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The account representing the household that receives assistance</description>
    <label>Household</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Household</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Household Distributions</relationshipLabel>
    <relationshipName>Household_Distributions</relationshipName>
    <type>Lookup</type>
</CustomField>