ccenter/main/default/objects/Household_Distribution__c/fields/Recipient__c.field-meta.xml
<CustomField>
    <fullName>Recipient__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The person who actually receives a distribution</description>
    <label>Recipient</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.RecordTypeId</field>
            <operation>equals</operation>
            <value>Recipient</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Household Distributions</relationshipLabel>
    <relationshipName>Household_Distributions</relationshipName>
    <type>Lookup</type>
</CustomField>